HUGE refactor of the SA to support the new Element driven analysis. Lots still let to fix though. Gotta figure out how I want to handle special operators. Do I want to do some work in the Reader? Or let the SA handle it based on Symbol name? What happens when the Special Operator is redefined? Can it be? Should I allow it? Gotta do some reading before I make my decision here as that will influence my decision on how to approach this...